# NDP

./: Data-12-4-2020  README.md
CS-550-Project/: README.md
CS-550-Project-master/: README.md
CS-550-Project-master/proj/userfault_prototype/: CMakeLists.txt
CS-550-Project/userfaultfd/userfault_prototype/include/edge/: panic.h
Data/: 1.2GiB-Data  1MiB-Data  2.4GiB-Data  2MiB-Data  306.62MiB-Data  4KiB-Data  613.25MiB-Data  8KiB-Data
POC-client-server/: README.md  client_poc.cpp  server_poc.cpp
Proposal-Paper/: references.bib
microbenchmarks/dynamicArray/: .array.c.swp  Makefile  array.h
microbenchmarks/dynamic_array/: array.c  main.c
microbenchmarks/graphs/: TODO
microbenchmarks/graphs/bc/: TODO
microbenchmarks/graphs/bfs/: Makefile  TODO  bfs.c  bfs.h  main.c
microbenchmarks/graphs/cc/: TODO
microbenchmarks/graphs/pr/: TODO
microbenchmarks/graphs/sssp/: TODO
microbenchmarks/mergeSorting/: Makefile  array_functions.h  main.c  mergeSort.c  mergeSort.h  sortAlgo.c  sortAlgo.h  sortingArray
microbenchmarks/merkle-tree/: Makefile  merkle.c
microbenchmarks/merkle-tree/rust-version/: Cargo.toml
microbenchmarks/merkle-tree/rust-version/src/: main.rs
microbenchmarks/sortingArray/: array_functions.c  main.c  sortAlgo.c  sortAlgo.h
microbenchmarks/static_array/: Makefile  main.c  staticArray
microbenchmarks/sumArray/: Makefile  createTree.c  functions.c  functions.h  main.c  sumArray
papers/: Project-Proposal.tex
proj/: .gitignore
proj/userfault_prototype/src/: main.cpp
userfaultfd/: .clang-format  CMakeLists.txt
userfaultfd/edge/: CMakeLists.txt
userfaultfd/edge/include/edge/: fault_msg.h  interop.h  mapped_buf.h  panic.h
userfaultfd/edge/include/edge/internal/: uffd.h
userfaultfd/edge/src/: fault_handler_memory.cpp  fault_msg.cpp  fault_registration.cpp  interop.cpp  main.cpp  mapped_buf.cpp
userfaultfd/edge/src/internal/: uffd.cpp
userfaultfd/edge/src/networking/: buffer_context.cpp
userfaultfd/edge_client/: CMakeLists.txt
userfaultfd/edge_client/src/: main.cpp
userfaultfd/edge_server/: CMakeLists.txt
userfaultfd/edge_server/src/: main.cpp
userfaultfd/include/edge/: fault_handler_memory.h  fault_registration.h  panic.h
userfaultfd/ndp/: CMakeLists.txt
userfaultfd/ndp/include/: panic.h
userfaultfd/ndp/include/ndp/: core.h  mapped_buf.h  uffd.h
userfaultfd/ndp/sketch/: sketch.c
userfaultfd/ndp/src/: main.c  mapped_buf.c  uffd.c
userfaultfd/userfault_prototype/: CMakeLists.txt
userfaultfd/userfault_prototype/include/edge/: panic.h
userfaultfd/userfault_prototype/src/: main.cpp
userfaultfd_rs/: Cargo.toml
userfaultfd_rs/.run/: Build All.run.xml  Run edge_client.run.xml  Run edge_server.run.xml
userfaultfd_rs/bolt/: Cargo.toml
userfaultfd_rs/bolt/src/: buffer.rs  codec.rs  lib.rs  messages.rs  nodes.rs
userfaultfd_rs/edge/: Cargo.toml
userfaultfd_rs/edge/src/: lib.rs
userfaultfd_rs/edge_client/: Cargo.toml
userfaultfd_rs/edge_client/src/: main.rs
userfaultfd_rs/edge_server/: Cargo.toml
userfaultfd_rs/edge_server/src/: main.rs  server.rs
