[package]
name = "edge_client"
version = "0.1.0"
authors = ["Josh Bowden <josbow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.80"
nix = "0.19"
userfaultfd = "0.2"
byteorder = "1.3"

edge = { path = "../edge" }
bolt = { path = "../bolt" }
