[package]
name = "edge_server"
version = "0.1.0"
authors = ["Josh Bowden <josbow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
clap = "3.0.0-beta.2"
vec-arena = "1.0"
byteorder = "1.3"
pretty_env_logger = "0.4"
log = "0.4"

bolt = { path = "../bolt" }
edge = { path = "../edge" }
