[package]
name = "merkle-bench"
version = "0.1.0"
authors = ["Kyle Hale <khale@cs.iit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand      = "0.8.4"
clap      = "2.33"
criterion = "0.3"
sha2      = "0.9.8"
